--- a/CSS/Tela de cadastro v1.3.html
+++ b/CSS/Tela de cadastro v1.3.html
@@ -11,11 +11,11 @@
 <body>
     <div class="header">
         <div class="container">
-            <img src="assets/logo_black.jpeg" alt="" width="100px">
+            <img src="assets/Logo-transparent.png" alt="" width="100px">
             <h1>Néos Demétris</h1>
             <ul class="navbar">
                 <li class=""><a href="Tela Inicial v1.0.html">Inicial</a></li>
-                <li class=""><a href="">Simulador</a></li>
+                <li class=""><a href="SimuladorFinanceiro.html">Simulador</a></li>
                 <li>|</li>
                 <li class=""><a href="Tela de login v1.3.html">Login</a></li>
                 <li class="here"><a href="">Cadastro</a></li>
