--- a/CSS/types/Tela Base v1.1 (White).html
+++ b/CSS/types/Tela Base v1.1 (White).html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela base</title>
-    <link rel="stylesheet" href="style-base.css">
+    <link rel="stylesheet" href="style-base v1.1 (White).css">
 </head>
 <body>
     <div class="header">
         <div class="container">
-            <img src="assets/Logo-transparent.png" alt="" width="100px">
+            <img src="assets/logo_white.jpeg" alt="" width="100px">
             <h1>Néos Demétris</h1>
             <ul class="navbar">
-                <li class=""><a href="">Inicial</a></li>
+                <li class=""><a href="Tela Base.html">Inicial</a></li>
                 <li class=""><a href="">Simulador</a></li>
                 <li>|</li>
-                <li class=""><a href="">Login</a></li>
-                <li class=""><a href="">Cadastro</a></li>
+                <li class=""><a href="Tela de login v1.3.html">Login</a></li>
+                <li class=""><a href="Tela de login v1.3.html">Cadastro</a></li>
             </ul>
         </div>
     </div>
