Upload do codigo

--- a/site/public/Cadastro.html
+++ b/site/public/Cadastro.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de cadastro</title>
-    <link rel="stylesheet" href="style-base.css">
-    <link rel="stylesheet" href="style-cadastro.css">
+    <link rel="stylesheet" href="css/style-base.css">
+    <link rel="stylesheet" href="css/style-cadastro.css">
 </head>
 <body>
     <div class="header">
@@ -14,10 +14,10 @@
             <img src="assets/Logo-transparent.png" alt="" width="100px">
             <h1>Néos Demétris</h1>
             <ul class="navbar">
-                <li class=""><a href="Tela Inicial v1.0.html">Inicial</a></li>
-                <li class=""><a href="SimuladorFinanceiro.html">Simulador</a></li>
+                <li class=""><a href="Index.html">Inicial</a></li>
+                <li class=""><a href="Simulador.html">Simulador</a></li>
                 <li>|</li>
-                <li class=""><a href="Tela de login v1.3.html">Login</a></li>
+                <li class=""><a href="Login.html">Login</a></li>
                 <li class="here"><a href="">Cadastro</a></li>
             </ul>
         </div>
@@ -52,7 +52,7 @@
                     <label for="agreement" id="agreement">Eu li e aceito os <a href="http://www.pudim.com.br/">termos de uso</a></label>
                 </div>
                 <div class="full-box">
-                    <input type="submit" id="btn_submit" value="Registrar"> 
+                    <button>Cadastrar</button>
                 </div>
             </form>
             </div>
@@ -61,7 +61,7 @@
     </div>
 <div class="footer">
     <div class="container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <p>Néo Demetris Enterprises ®</p>
     </div>
 </div>
 </body>
