--- a/site/public/Login.html
+++ b/site/public/Login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela base</title>
-    <link rel="stylesheet" href="style-base.css">
-    <link rel="stylesheet" href="style-login.css">
+    <link rel="stylesheet" href="css/style-base.css">
+    <link rel="stylesheet" href="css/style-login.css">
 </head>
 <body>
     <div class="header">
@@ -14,11 +14,11 @@
             <img src="assets/Logo-transparent.png" alt="" width="100px">
             <h1>Néos Demétris</h1>
             <ul class="navbar">
-                <li class=""><a href="Tela Inicial v1.0.html">Inicial</a></li>
-                <li class=""><a href="SimuladorFinanceiro.html">Simulador</a></li>
+                <li class=""><a href="Index.html">Inicial</a></li>
+                <li class=""><a href="Simulador.html">Simulador</a></li>
                 <li>|</li>
                 <li class="here"><a href="">Login</a></li>
-                <li class=""><a href="Tela de cadastro v1.3.html">Cadastro</a></li>
+                <li class=""><a href="Cadastro.html">Cadastro</a></li>
             </ul>
         </div>
     </div>
@@ -36,7 +36,7 @@
                         <input type="password" name="senha" id="senha" placeholder="Digite a sua senha" autofocus>
                     </div>
                     <div class="full-box">
-                        <input type="submit" id="btn_submit" value="Login">  
+                        <button>Login</button>  
                     </div>
                 </form>
                 </p>
@@ -46,7 +46,7 @@
     </div>
 <div class="footer">
     <div class="container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <p>Néo Demetris Enterprises ®</p>
     </div>
 </div>
 </body>
