--- a/site/public/Simulador.html
+++ b/site/public/Simulador.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador Financeiro</title>
-    <link rel="stylesheet" href="style-base.css">
-    <link rel="stylesheet" href="style-simulador.css">
+    <link rel="stylesheet" href="css/style-base.css">
+    <link rel="stylesheet" href="css/style-simulador.css">
 </head>
 <body>
     <div class="header">
@@ -15,11 +15,11 @@
             <img src="assets/Logo-transparent.png" alt="" width="100px">
             <h1>Néos Demétris</h1>
             <ul class="navbar">
-                <li class=""><a href="Tela Inicial v1.0.html">Inicial</a></li>
+                <li class=""><a href="Index.html">Inicial</a></li>
                 <li class="here"><a href="">Simulador</a></li>
                 <li>|</li>
-                <li class=""><a href="Tela de login V1.3.html">Login</a></li>
-                <li class=""><a href="Tela de cadastro v1.3.html">Cadastro</a></li>
+                <li class=""><a href="Login.html">Login</a></li>
+                <li class=""><a href="Cadastro.html">Cadastro</a></li>
             </ul>
         </div>
     </div>
@@ -54,7 +54,7 @@
     </div>
 <div class="footer">
     <div class="container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <p>Néo Demetris Enterprises ®</p>
     </div>
 </body>
 </html>
