--- a/site/public/Index.html
+++ b/site/public/Index.html
@@ -18,10 +18,10 @@
 
     <div class="header">
         <div class="container">
-            <div class="logo">
+            <a href="Index.html"><div class="logo">
                 <img src="assets/logo2.png" alt="Logo empresarial 'Deméter'" width="100px">
                 <h1>Deméter</h1>
-            </div>
+            </div></a>
             <ul class="navbar">
                 <li class="here"><a href="">Inicial</a></li>
                 <li class=""><a href="Simulador.html">Simulador</a></li>
@@ -141,10 +141,10 @@
                         <a href="https://github.com/jknss" target="_blank"><img src="assets/git2.png" alt=""></a>
                     </div>
                     <div class="box">
-                        <img src="assets/squad4.png" alt="">
+                        <img src="assets/squad5.jpg" alt="">
                         <h4>Vinicius Venancio</h4>
                         <p>Back-end</p>
-                        <a href="https://github.com/VVenancio3" target="_blank"><img src="assets/git2.png" alt=""></a>
+                        <a href="https://github.com/Viniciusv3" target="_blank"><img src="assets/git2.png" alt=""></a>
                     </div>
                     <div class="box">
                         <img src="assets/squad6.png" alt="">
