--- a/site/public/Simulador.html
+++ b/site/public/Simulador.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador Financeiro</title>
+    <link rel="icon" href="assets/Logo-transparent2.png">    <!--logo na head da pagina -->
     <link rel="stylesheet" href="css/style-base.css">        <!--style-base (header, background, footer)-->
     <link rel="stylesheet" href="css/style-simulador.css">   <!--style-simulador (box)-->
-    <link rel="icon" href="assets/Logo-transparent2.png">    <!--logo na head da pagina -->
 </head>
 <body>
 
@@ -15,10 +15,10 @@
 
     <div class="header">
         <div class="container">
-            <div class="logo">
+            <a href="Index.html"><div class="logo">
                 <img src="assets/Logo-transparent2.png" alt="" width="100px">
                 <h1>Deméter</h1>
-            </div>
+            </div></a>
             <ul class="navbar">
                 <li class=""><a href="Index.html">Inicial</a></li>
                 <li class="here"><a href="">Simulador</a></li>
