--- a/site/public/Dashboard-Silos.html
+++ b/site/public/Dashboard-Silos.html
@@ -24,7 +24,7 @@
         >
         <ul class="navbar">
           <li class="">Bem vindo!</li>
-          <li class=""><span id="b_usuario">usuário</span></li>
+          <li class=""><span id="b_usuario" style="color: #1C66a6">usuário</span></li>
           <li class="">||</li>
           <li class=""><a href="Index.html">Sair</a></li>
         </ul>
