--- a/site/public/Index.html
+++ b/site/public/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela inicial</title>
+    <title>Inicial - Deméter</title>
     <link rel="icon" href="assets/Logo-transparent2.png">     <!--logo na head da pagina -->
     <link rel="stylesheet" href="css/style-base-Inicial.css"> <!--style-base (header, background, footer)-->
     <link rel="stylesheet" href="css/style-inicial.css">      <!--style-inicial (banner, sobre nós, box(missão,visão,valores), solução, equipe)-->
@@ -126,7 +126,7 @@
                         <a href="https://github.com/NataSFSilva" target="_blank"><img src="assets/git2.png" alt=""></a>
                     </div>
                     <div class="box">
-                        <img src="assets/squad3.png" alt="">
+                        <img src="assets/gitj.jpg" alt="">
                         <h4>Johnatan Cardozo</h4>
                         <p>Full Stack</p>
                         <a href="https://github.com/JohnatanMoreira1" target="_blank"><img src="assets/git2.png"
