--- a/site/public/Simulador.html
+++ b/site/public/Simulador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Financeiro</title>
+    <title>Simulador - Deméter</title>
     <link rel="icon" href="assets/Logo-transparent2.png">    <!--logo na head da pagina -->
     <link rel="stylesheet" href="css/style-base.css">        <!--style-base (header, background, footer)-->
     <link rel="stylesheet" href="css/style-simulador.css">   <!--style-simulador (box)-->
