--- a/site/public/Dashboard-Silos.html
+++ b/site/public/Dashboard-Silos.html
@@ -41,7 +41,10 @@
               ></canvas>
               <div class="lilBox">
                 <h2>Silo 1</h2>
-                <img width="40px" height="40px" src="" style="display: none" />
+                <img width="40px" 
+                height="40px" 
+                src="https://queimadas.dgi.inpe.br/~rqueimadas/material3os/blog_paulo_tempo_files/alerta2.gif" 
+                style="display: block" />
               </div>
             </div>
           </a>
@@ -69,7 +72,11 @@
               ></canvas>
               <div class="lilBox">
                 <h2>Silo 3</h2>
-                <img width="40px" height="40px" src="" style="display: none" />
+                <img 
+                width="40px" 
+                height="40px" 
+                src="" 
+                style="display: none" />
               </div>
             </div>
           </a>
