--- a/site/public/Login.html
+++ b/site/public/Login.html
@@ -55,12 +55,12 @@
                         <button onclick="entrar()">Login</button>  
                     </div>
                 </div>
-            </div>
-            <div id="div_aguardar" class="loading-div" style="display: none;">
-                <img src="./assets/circle-loading.gif" id="loading-gif">
-            </div>
-            <div id="div_erros_login">
-                
+                <div id="div_aguardar" class="loading-div" style="display: none;">
+                    <img src="./assets/circle-loading.gif" id="loading-gif">
+                </div>
+                <div id="div_erros_login">
+                    
+                </div>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@ function entrar() {
 
         if (emailVar == "" || senhaVar == "") {
             cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "(Mensagem de erro para campos em branco)";
+            mensagem_erro.innerHTML = "Por favor, preencha todos os campos! ";
             finalizarAguardar();
             return false;
         }
