--- a/site/public/Index.html
+++ b/site/public/Index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="boxes">
                     <div class="box">
-                        <img src="assets/squad3.png" alt="">
+                        <img src="assets/WhatsApp Image 2022-10-20 at 23.22.08 (2).jpeg" alt="">
                         <h4>Júlio Kanashiro</h4>
                         <p>Back-end</p>
                         <a href="https://github.com/jknss" target="_blank"><img src="assets/git2.png" alt=""></a>
@@ -147,7 +147,7 @@
                         <a href="https://github.com/Viniciusv3" target="_blank"><img src="assets/git2.png" alt=""></a>
                     </div>
                     <div class="box">
-                        <img src="assets/squad6.png" alt="">
+                        <img src="assets/squad6.jpeg" alt="">
                         <h4>Washington da Silva</h4>
                         <p>Front-end</p>
                         <a href="https://github.com/WashingtonFarias" target="_blank"><img src="assets/git2.png"
